syntax = "proto3";

package wanderer.proto;

message plant {
  optional float current_growth = 1;
  optional float rate = 2;

  optional float base_y = 3;
  optional int32 tile_height = 4;

  optional uint64 index = 5;
  repeated uint32 tiles = 6 [packed = true];
  repeated uint32 tall_tiles = 7 [packed = true];
}