syntax = "proto3";

package wanderer.proto;

enum TriggerType {
  PORTAL = 0;
  CONTAINER = 1;
  BED = 2;
}

message Trigger {
  optional TriggerType type = 1;
}