syntax = "proto3";

package wanderer.protobuf;

message tile_animation {

  message frame {
    optional uint32 tile_id = 1;
    optional uint32 duration = 2;
  }

  optional uint64 index = 1;
  optional uint32 then = 2;
  repeated frame frames = 3;
}

